@@ -377,13 +377,15 @@ Compatibility function for XEmacs."
 	      (if y2
 		  ;; Update range of years
 		  (if (or (> 1999 y1) (>= y1 y2) (> y2 y))
-		      (lwarn 'ebuild :warning
+		      ;; XEmacs wants 'warning instead of :warning,
+		      ;; but nil always works (and defaults to :warning)
+		      (lwarn 'ebuild nil
 			     "Suspicious range of copyright years: %d-%d" y1 y2)
 		    (if (/= y2 y)
 			(replace-match year t t nil 2)))
 		;; Update single year and convert to range if necessary
 		(if (or (> 1999 y1) (> y1 y))
-		    (lwarn 'ebuild :warning "Suspicious copyright year: %d" y1)
+		    (lwarn 'ebuild nil "Suspicious copyright year: %d" y1)
 		  (if (/= y1 y)
 		      (replace-match (concat "\\1-" year) t nil nil 1))))))
 	(if update-author
